--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
 		<h1>Yao Lu</h1>
 		<nav>
 			<ul>
-				<li><a href="#research">研究</a></li>
-				<li><a href="#publications">出版物</a></li>
-				<li><a href="#teaching">教学</a></li>
-				<li><a href="#cv">CV</a></li>
+				<li><a href="#research">Research</a></li>
+				<li><a href="#publications">Publications</a></li>
+				<li><a href="#teaching">Teaching</a></li>
+				<li><a href="#Introduction"></a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<main>
 		<section id="research">
-			<h2>研究</h2>
-			<p>在这里介绍你的研究方向和兴趣</p>
+			<h2>Research</h2>
+			<p>Cloud Computing、Edge Computing</p>
 		</section>
 
 		<section id="publications">
 			<h2>出版物</h2>
-			<p>列出你的出版物，并提供链接和引用</p>
+			<p>Y. Lu, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
+				in IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020, doi: 10.1109/TCCN.2019.2954388.</p>
 		</section>
 
 		<section id="teaching">
@@ -33,9 +34,9 @@
 			<p>列出你的教学经验和课程，如果有的话，提供链接</p>
 		</section>
 
-		<section id="cv">
-			<h2>CV</h2>
-			<p>提供你的CV，并包括联系信息</p>
+		<section id="Introduction">
+			<h2>introduction</h2>
+			<p>I got the PHD degree form University of Leicester</p>
 		</section>
 	</main>
 
