--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 	<div class="container">
 		<div class="animate"></div>
 		<header>
-			<h1>你的名字</h1>
+			<h1>YAO LU</h1>
 			<nav>
 				<ul>
-					<li><a href="#research">研究</a></li>
-					<li><a href="#publications">出版物</a></li>
-					<li><a href="#teaching">教学</a></li>
+					<li><a href="#research">Research </a></li>
+					<li><a href="#publications">Publications</a></li>
+					<li><a href="#teaching">Teaching</a></li>
 					<li><a href="#cv">CV</a></li>
 				</ul>
 			</nav>
@@ -66,18 +66,18 @@
 	
 		<main>
 			<section id="research">
-				<h2>研究</h2>
+				<h2>Research</h2>
 				<p></p>
 			</section>
 	
 			<section id="publications">
-				<h2>出版物</h2>
+				<h2>publications</h2>
 				<p>Y. Lu, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
 				in IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020, doi: 10.1109/TCCN.2019.2954388.</p>
 			</section>
 	
 			<section id="teaching">
-				<h2>教学</h2>
+				<h2>Teaching</h2>
 				<p>列出你的教学经验和课程，如果有的话，提供链接</p>
 			</section>
 	
@@ -88,7 +88,7 @@
 		</main>
 	
 		<footer>
-			<p>版权 © 2023 你的名字</p>
+			<p>版权 © 2023 yao lu</p>
 		</footer>
 	</div>
 </body>
