--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>YAO LU - 学术个人网站</title>
+	<title>YAO LU - Personal website</title>
 	<style>
 		body {
 			background-color: #000;
