--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			left: 0;
 			height: 100%;
 			width: 100%;
-			background-image: url('https://cdn.pixabay.com/photo/2018/03/31/19/29/mesh-3279361_960_720.png');
+			background-image: url('https://cdn.pixabay.com/photo/2017/08/10/02/05/artificial-intelligence-2614277_960_720.jpg');
 			background-position: center;
 			background-size: cover;
 			animation: animate-bg 15s ease infinite;
