--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>YAO LU - Personal website</title>
 	<style>
 		body {
-			background-color: #000;
+			background-color: #ffffff;
 			color: #fff;
 			font-family: Arial, sans-serif;
 			font-size: 16px;
