--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>
 		body {
 			background-color: #ffffff;
-			color: #fff;
+			color:black;
 			font-family: Arial, sans-serif;
 			font-size: 16px;
 			line-height: 1.5;
