--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 	
 			<section id="publications">
 				<h2>publications</h2>
-				<p>Y. Lu, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
-				in IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020, doi: 10.1109/TCCN.2019.2954388.</p>
+				<p>1.  Y. Lu, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
+				in IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020, doi: 10.1109/TCCN.2019.2954388.
+				   2.  Y. Lu, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G, 
+					IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020. </p>
 			</section>
 	
 			<section id="teaching">
