--- a/index.html
+++ b/index.html
@@ -73,10 +73,27 @@
 	
 			<section id="publications">
 				<h2>publications</h2>
-				<p>1.  Y. Lu, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
+				<p>1. <b>Y. Lu</b>, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
 				       in IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020, doi: 10.1109/TCCN.2019.2954388.</p>
-				<p>2.  Y. Lu, L. Liu, J. Panneerselvam, X. Zhai, X. Sun and N. Antonopoulos, Latency-Based Analytic Approach to Forecast Cloud Workload Trend for Sustainable Datacenters, 
+				<p>2.   <b>Y. Lu</b>, L. Liu, J. Panneerselvam, X. Zhai, X. Sun and N. Antonopoulos, Latency-Based Analytic Approach to Forecast Cloud Workload Trend for Sustainable Datacenters, 
 				       IEEE Transactions on Sustainable Computing, vol. 5, no. 3, pp. 308-318, 1 July-Sept. 2020.  </p>
+				<p>3.   <b>Y. Lu</b>, J. Gu, L. Liu, J. Panneerselvam, EA-DFPSO: A PSO-Based Energy-efficient Scheduling Algorithm for Mobile Edge Computing, Digital Communication and Networks, 
+			               vol.8, pp.235-410, 2022.  </p>
+	                        <p>4.   <b>Y. Lu</b>, J. Gu, L Liu, J. Panneerselvam, N. Antonopoulos, An Energy-efficient Cloud-Edge Collaboration Framework based on Deep Neural Networks for Sustainable Cloud Manufacturing, 
+				       IEEE Transactions on Industrial Informatics, under review2022.  </p>
+	                        <p>5.   <b>Y. Lu</b>, J. Panneerselvam, L. Liu, and Y. Wu, "RVLBPNN: A workload forecasting model for smart cloud computing," Scientific Programming, vol. 2017, pp. 1-9, 2017.  </p>
+				<p>6.  J. Gu, Y. Wu, A. Anjum, J. Panneerselvam, <b>Y. Lu</b>, B. Yuan, Optimization of service addition in multilevel index model for edge computing, 
+				       Concurrency and Computation: Practice and Experience, September 2021.  </p>
+	                        <p>7.  W. Yu, M. Jia, X. Fang,  <b>Y. Lu</b>, Modelling and analysis of medical resource allocation based on Timed Coloured Petri net, Future Generation Computer Systems, 
+				       vol. 111, pp. 368-374, October 2020.  </p>
+	                        <p>8.  B. Yuan, J. Panneerselvam, L. Liu, N. Antonopoulos and  <b>Y. Lu</b>, An Inductive Content-Augmented Network Embedding Model for Edge Artificial Intelligence, 
+				       IEEE Transactions on Industrial Informatics, vol. 15, no. 7, pp. 4295-4305, July 2019. </p>
+				<p>9.  J. Panneerselvam, L. Liu,  <b>Y. Lu</b>, and N. Antonopoulos, An investigation into the impacts of task-level behavioural heterogeneity upon energy efficiency in Cloud datacentres, 
+				       Future Generation Computer Systems, vol. 83, pp. 239-249, June 2018. </p>
+	                        <p>10. H. Wang, J. Pannereselvam, L. Liu,  <b>Y. Lu</b>, X. Zhai and H. Ali, "Cloud Workload Analytics for Real-Time Prediction of User Request Patterns," 
+				       IEEE 4th International Conference on Data Science and Systems (DSS), Exeter, United Kingdom, 2018, pp. 1677-1684.<b>(Best Paper Award）</b> </p>
+	                        <p>11. J. Cui, J. Zhang, J. He, H. Zhong and  <b>Y. Lu</b>, "DDoS detection and defense mechanism for SDN controllers with K-Means," 
+				       6th International Symposium on Real-time Data Processing for Cloud Computing (RTDPCC 2020), Leicester, United Kingdom, 2020, pp. 394-401. <b>（Best Paper Award）</b></p>
 			</section>
 	
 			<section id="teaching">
