--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			line-height: 1.5;
 			margin: 0;
 			padding: 0;
-			overflow: hidden;
+			overflow: auto;
 			margin-left: 50px;
 		}
 
@@ -25,8 +25,8 @@
 			background-image: url('https://cdn.pixabay.com/photo/2017/08/10/02/05/artificial-intelligence-2614277_960_720.jpg');
 			background-position: center;
 			background-size: cover;
-			overflow: hidden;
-		}
+			overflow: auto;
+		           }
 
 		.animate {
 			position: absolute;
