--- a/index.html
+++ b/index.html
@@ -60,19 +60,29 @@
 					<li><a href="#research">Research </a></li>
 					<li><a href="#publications">Publications</a></li>
 					<li><a href="#teaching">Teaching</a></li>
-					<li><a href="#cv">CV</a></li>
+					<li><a href="#introduction">CV</a></li>
 				</ul>
 			</nav>
 		</header>
 	
 		<main>
+			<section id="introduction">
+				<h2> Personal Introduction</h2>
+				<p>I got the Ph.D degree in computer science from the University of Leicester, UK in 2021. After that , I work for Lancaster University as a senior research associate.</p>
+			</section>
+			
 			<section id="research">
 				<h2>Research</h2>
-				<p></p>
+				<p>• Workload Data Analysis and Prediction for Energy-efficiency in large-scale ICT systems </p>
+				<p>• Advanced Feature Analytics and Pattern Detection for large-scale heterogeneous datasets </p> 
+				<p>• Big Data Analytics in Interdisciplinary Research </p>
+				<p>• Scheduling and Resource Management in Distributed Datacentres</p>
+				<p>• AI-based Model Development for Solving Practical Problems</p>
+				<p>• Internet of Things and Communication Systems</p>
 			</section>
 	
 			<section id="publications">
-				<h2>publications</h2>
+				<h2>Publications</h2>
 				<p>1. <b>Y. Lu</b>, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
 				       in IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020, doi: 10.1109/TCCN.2019.2954388.</p>
 				<p>2.   <b>Y. Lu</b>, L. Liu, J. Panneerselvam, X. Zhai, X. Sun and N. Antonopoulos, Latency-Based Analytic Approach to Forecast Cloud Workload Trend for Sustainable Datacenters, 
@@ -98,13 +108,12 @@
 	
 			<section id="teaching">
 				<h2>Teaching</h2>
-				<p>列出你的教学经验和课程，如果有的话，提供链接</p>
+				<p>Cloud Computing and Big Data System</p>
+				<p>Big Data Analysis</p>
+				<p>Distribute Computing</p>
 			</section>
 	
-			<section id="cv">
-				<h2>CV</h2>
-				<p>提供你的CV，并包括联系信息</p>
-			</section>
+			
 		</main>
 	
 		<footer>
