--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 	<div class="container">
 		<div class="animate"></div>
 		<header>
-			<h1>YAO LU</h1>
+			<h1>Dr. YAO LU</h1>
 			<nav>
 				<ul>
 					<li><a href="#research">Research </a></li>
 					<li><a href="#publications">Publications</a></li>
 					<li><a href="#teaching">Teaching</a></li>
-					<li><a href="#introduction">CV</a></li>
+					<li><a href="#introduction">Personal Introduction</a></li>
 				</ul>
 			</nav>
 		</header>
