--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 			<nav>
 				<ul>
 					
-					<li><a href="#research">Research </a></li>
+					<li><a href="#research">Research </a>
+					<a id="research">Research </a>
+					</li>
 					<li><a href="#publications">Publications</a></li>
 					<li><a href="#teaching">Teaching</a></li>
 					<li><a href="#introduction">Personal Introduction</a></li>
