--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
 	<meta charset="UTF-8">
 	<title>YAO LU - Personal website</title>
+	  
 	<style>
 		body {
 			background-color: #ffffff;
@@ -51,6 +52,8 @@
 	</style>
 </head>
 <body>
+	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" alt="avatar">
+
 	<div class="container">
 		<div class="animate"></div>
 		<header>
