--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 	</style>
 </head>
 <body>
-	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" alt="avatar">
+	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width: 100px,
+
+         height: auto, alt="avatar">
 
 	<div class="container">
 		<div class="animate"></div>
