--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	</style>
 </head>
 <body>
-	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width: 50px,
+	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width="50"
 
-         height: auto, alt="avatar">
+             height="80" />
 
 	<div class="container">
 		<div class="animate"></div>
