--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	</style>
 </head>
 <body>
-	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width="50"
+	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width="100"
 
-             height="80" />
+             height=auto />
 
 	<div class="container">
 		<div class="animate"></div>
