--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	</style>
 </head>
 <body>
-	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width="400"
+	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width="300"
 
-             height=auto />
+             height=“400” />
 
 	<div class="container">
 		<div class="animate"></div>
