--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</style>
 </head>
 <body>
-	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" width="300"
+	<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" alt="个人头像" style="float: right; margin-left: 10px;"width="300"
 
              height=“400” />
 
