--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="animate"></div>
 		<header>
 			<h1>Dr. YAO LU</h1>
-			<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" alt="个人头像" style="float: left; margin-left: 50px;"width="300"
+			<img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true>" alt="个人头像" style="float: right; margin-rigjt: 300px;"width="300"
 
              height=“400” />
 			<nav>
