--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 		<main>
 			<section id="introduction">
 				<h2> Personal Introduction</h2>
-				<p>Dr. Yao Lu is a lecturer (assistant professor）of the School of Computer Science and Technology at Anhui University. </p>
-				<p>Dr. Lu received his PhD degree from the University of Leicester, UK. After that, he had worked as a senior research associate at Lancaster University, UK.</p>
+				<p>Dr. Yao Lu is a lecturer (assistant professor）of the School of Computer Science and Technology at Anhui University.Dr. Lu received his PhD degree from the University of Leicester, UK.
+			           After that, he had worked as a senior research associate at Lancaster University, UK.</p>
 			</section>
 			
 			<section id="research">
