--- a/index.html
+++ b/index.html
@@ -56,18 +56,19 @@
 
 	<div class="container">
 		<div class="animate"></div>
-		<header>
-    <h1>Dr. YAO LU</h1>
-    <nav>
-        <ul>
-            <li><a href="#research">Research</a></li>
-            <li><a href="#publications">Publications</a></li>
-            <li><a href="#teaching">Teaching</a></li>
-            <li><a href="#introduction">Personal Introduction</a></li>
-        </ul>
-    </nav>
-    <img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true" alt="个人头像" style="float: right; margin: 10px 0 0 20px; width: 300px; height: 400px;">
+		<header style="display: flex; align-items: center;">
+  <h1>Dr. YAO LU</h1>
+  <img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true" alt="个人头像" style="margin-left: 20px; width: 300px; height: 400px;">
+  <nav>
+    <ul>
+      <li><a href="#research">Research</a></li>
+      <li><a href="#publications">Publications</a></li>
+      <li><a href="#teaching">Teaching</a></li>
+      <li><a href="#introduction">Personal Introduction</a></li>
+    </ul>
+  </nav>
 </header>
+
 	
 		<main>
 			<section id="introduction">
