--- a/index.html
+++ b/index.html
@@ -57,17 +57,20 @@
 	<div class="container">
 		<div class="animate"></div>
 		<header>
-    <h1>Dr. YAO LU</h1>
-    <img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true" alt="个人头像" style="float: right; margin-right: 20px; margin-top: 10px;" width="300" height="400" />
-    <nav>
-        <ul>
-            <li><a href="#research">Research</a></li>
-            <li><a href="#publications">Publications</a></li>
-            <li><a href="#teaching">Teaching</a></li>
-            <li><a href="#introduction">Personal Introduction</a></li>
-        </ul>
-    </nav>
+  <div style="display: flex; align-items: center;">
+    <img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true" alt="个人头像" style="margin-right: 20px;" width="300" height="400">
+    <h1 style="margin: 0;">Dr. YAO LU</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#research">Research </a></li>
+      <li><a href="#publications">Publications</a></li>
+      <li><a href="#teaching">Teaching</a></li>
+      <li><a href="#introduction">Personal Introduction</a></li>
+    </ul>
+  </nav>
 </header>
+
 
 
 	
