--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="animate"></div>
 		<header>
   <div style="display: flex; align-items: center;">
-    <img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true" alt="个人头像" style="margin-right: 20px;" width="300" height="400">
+    <img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true" alt="个人头像" style="margin-right: 10px;width=200">
     <h1 style="margin: 0;">Dr. YAO LU</h1>
   </div>
   <nav>
