--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="animate"></div>
 		<header>
   <div style="display: flex; align-items: center;">
-    <h1 style="margin: 0;">Dr. YAO LU</h1>
+    <h1 style="margin: 10px;">Dr. YAO LU</h1>
 	  <img src="https://github.com/lyxiaowangzi/yao.lu.github.io/blob/main/personal-image.jpg?raw=true" alt="个人头像" style="margin-right: 20px;" width="300" height="300">
     
   </div>
@@ -78,8 +78,8 @@
 		<main>
 			<section id="introduction">
 				<h2> Personal Introduction</h2>
-				<p>Dr. Yao Lu is a lecturer (assistant professor）of the School of Computer Science and Technology at Anhui University.Dr. Lu received his PhD degree from the University of Leicester, UK.
-			           After that, he had worked as a senior research associate at Lancaster University, UK.</p>
+				<p>Dr. Yao Lu is a lecturer (assistant professor）of the School of Computer Science and Technology at Anhui University. Dr. Lu received his PhD degree from the University of Leicester, UK, in 2021.
+			           After that, he started his postdoc work as a senior research associate at Lancaster University, UK. From 2023, he joined Anhui University, China.</p>
 			</section>
 			
 			<section id="research">
