--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			</section>
 	
 			<section id="publications">
-				<h3>Publications</3>
+				<h2>Publications</h2>
 				<p>1. <b>Y. Lu</b>, L. Liu, J. Panneerselvam, B. Yuan, J. Gu and N. Antonopoulos, "A GRU-Based Prediction Framework for Intelligent Resource Management at Cloud Data Centres in the Age of 5G," 
 				       in IEEE Transactions on Cognitive Communications and Networking, vol. 6, no. 2, pp. 486-498, June 2020, doi: 10.1109/TCCN.2019.2954388.</p>
 				<p>2.   <b>Y. Lu</b>, L. Liu, J. Panneerselvam, X. Zhai, X. Sun and N. Antonopoulos, Latency-Based Analytic Approach to Forecast Cloud Workload Trend for Sustainable Datacenters, 
@@ -117,7 +117,7 @@
 				       6th International Symposium on Real-time Data Processing for Cloud Computing (RTDPCC 2020), Leicester, United Kingdom, 2020, pp. 394-401. <b>（Best Paper Award）</b></p>
 			</section>
 			<section id="project">
-				<h4>Projects</h4>
+				<h2>Projects</h2>
 				<p>• Reducing the Global ICT Footprint via Self-adaptive Large-scale ICT Systems （UK EPSRC funded, 800,000 Pounds, project leader） </p  
 				<p>• An End-to-end Cyber Security Technology to Better Understand the Risks of Deep Learning Model Stealing (Innovate UK funded, 30,000 Pounds, Participating researcher） </p> 
 				<p>• Leicester Innnovation Accelerator Projects （2,000,000 Pounds, Participating researcher）</p>
@@ -125,21 +125,21 @@
 			</section>
 	                
 			<section id="award">
-				<h5>Awards</h5>
+				<h2>Awards</h2>
 				<p>• Best Paper Award, 4th International Conference on Data Science and Computational Intelligence 2021 (DSCI 2021) </p  
 				<p>• Best Paper Award, 4th IEEE International Conference on Data Science and Systems (IEEE DSS 2018) </p> 
 				<p>• 2021 Excellent Overseas Student Award（Chinese Ministry of Education Award） </p>
 
 			</section>
 			<section id="teaching">
-				<h6>Teaching</h6>
+				<h2>Teaching</h2>
 				<p>Cloud Computing and Big Data System</p>
 				<p>Big Data Analysis</p>
 				<p>Distribute Computing</p>
 			</section>
 			
 	                <section id="posts">
-				<h7>Concurrent Academic Posts</h7>
+				<h2>Concurrent Academic Posts</h2>
 				<p>Reviewer for IEEE Transactions on Industrial Informatics、IEEE Transactions on Sustainable Computing、IEEE Transactions on Cognitive Communications and Networking、
                                    IEEE Transactions on Parallel and Distributed Systems、IEEE Transactions on Computational Social Systems、Future Generation Computer Systems、Pattern Recognition Letters and so on </p>
                                  
